package tp3;

public abstract class FabriqueDePizza {
	protected abstract Pizza  creerPizza(String type);
}
