package tp3;

public class PizzeriaDeBrest extends Pizzeria {
	
	public PizzeriaDeBrest() {
		this.FabriqueDePizza = FabriqueDePizzaDeBrest.getInstance();
	}
	

}
